# JEDI-METplus

./: .gitignore  .gitmodules  README.md
docs/: IODAfile_Content.md  Tutorial_2024_Jul3.md
etc/: StatAnalysis.CTC.conf_tmpl  StatAnalysis.SL1L2.conf_tmpl  StatAnalysis.conf_tmpl  StatAnalysis_MMM.conf  jobhead_pbs  jobhead_slurm  sbatch_tmpl
etc/polygons/: jcrdp_polygon.csv  reuires_polygon.csv  wxaq_polygon.csv
genint-bundle/: .gitignore  CMakeLists.txt
modulefiles/: setup_derecho_gnu.sh  setup_derecho_intel.sh  setup_derecho_oneapi.sh  setup_orion_gnu.sh
notebooks/: compareAODwithAERONET.ipynb  custom_colormaps.py  functions.py  generateGriddedAODProducts.ipynb  plotAODProducts.ipynb  plotAirNowSiteMap.ipynb  plotGriddedAODProducts.ipynb  plotMultiObsBiasRMSETimeseries.ipynb  plotPandoraSubareas.ipynb  plotTEMPOTROPOMI.ipynb
pyscripts/: 2dScat_Max_GeoVals.py  batch_cropping.sh  crop_iodafile.py  dictionaries.py  functions.py  geaer_cmass_plotting.py  genint_vrfy.py  get_wrfout_polygon.py  hofx_plotting.py  ioda2metplusmpr.py  mm_mpr_data.py  multi_fhr_hofx_plotting.py  multi_fhr_stats_plotting.py  stats_plotting.py
ush/: process_merra2_to_ufo.sh  runscript  setup.sh
yamls/: AOD_hofx3d_lambertCC.yaml  hofx3d_lambertCC.yaml  main_wrfchem.yaml
yamls/hofx3d/: AOD_MERRA2.yaml  AOD_WRFChem.yaml  AOD_gcafs_127.yaml  AOD_hofx3d_WRF_LambertCC.yaml  AOD_hofx3d_gaussian_gefs.yaml  AOD_hofx3d_lambertCC.yaml  Identity_WRFChem.yaml  README.md  TraceGas_WRFChem.yaml  hofx3d_geos-cf_lonlat.yaml  hofx3d_lambertCC.yaml
yamls/main/: README.md  main_gcafs_aod.yaml  main_gefs.yaml  main_merra2_aod.yaml  main_wrfchem.yaml  main_wrfchem_aod.yaml  main_wrfchem_tracegas.yaml
yamls/observer/: observer_identity.yaml  observer_tmp_aodwrfchem.yaml  observer_tmp_gcafs.yaml  observer_tmp_lidarcrtm.yaml  observer_tmp_merra2.yaml  observer_tmp_tracegas.yaml
